--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
     "rxjs": "~6.5.5",
+    "three": "^0.120.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
