--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "gh-pages": "^3.1.0",
     "rxjs": "~6.5.5",
     "three": "^0.120.1",
     "tslib": "^2.0.0",
