--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
-    "github-api": "^3.4.0",
     "rxjs": "~6.5.5",
     "three": "^0.120.1",
     "tslib": "^2.0.0",
