--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build",
-    "deploy": "ng build && echo 'alfred-website.joshlucpoll.dev' > dist/CNAME && gh-pages -d dist",
+    "deploy": "export NODE_OPTIONS=--openssl-legacy-provider; ng build && echo 'alfred-website.joshlucpoll.dev' > dist/CNAME && gh-pages -d dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
