--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: export NODE_OPTIONS=--openssl-legacy-provider
-      - name: Angular Deploy gh-pages Actions
-        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
+
+      - name: Build
+        run: npm run build
+        run: echo 'alfiehilton.com' > dist/CNAME
+
+      - name: Deploy
+        use: peaceiris/actions-gh-pages@v3
         with:
-          angular_project_dir: "./"
-          build_configuration: "production" # The build environment for the app. please look configurations in your angular.json
-          github_access_token: ${{ secrets.ACCESS_TOKEN }}
+          github_token: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: ./dist
+
+      # - name: Angular Deploy gh-pages Actions
+      #   uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
+      #   with:
+      #     angular_project_dir: "./"
+      #     build_configuration: "production" # The build environment for the app. please look configurations in your angular.json
+      #     github_access_token: ${{ secrets.ACCESS_TOKEN }}
