--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build
-        run: npm run build
-        run: echo 'alfiehilton.com' > dist/CNAME
+        run: |
+          npm run build
+          echo 'alfiehilton.com' > dist/CNAME
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
