install deps on ci

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
 
       - name: Build
         run: |
+          npm ci
           npm run build
           echo 'alfiehilton.com' > dist/CNAME
 
