--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider; ng serve",
     "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build",
     "deploy": "export NODE_OPTIONS=--openssl-legacy-provider; ng build && echo 'alfred-website.joshlucpoll.dev' > dist/CNAME && gh-pages -d dist",
     "test": "ng test",
